# Nagare

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: dev-docker.yml  release.yml
api_reference/: ANKI_BEACON_INTEGRATION.md
examples/: plex_ws_probe.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.svelte  app.css
frontend/src/lib/: AudioTrackModal.svelte  AudioTrackSelector.svelte  ConfigPage.svelte  EnrichDialog.svelte  HistoryPage.svelte  MediaRemote.svelte  SessionSelector.svelte  SubtitleTimeline.svelte  ToastContainer.svelte  api.js  stores.js  utils.js  websocket.js  yomitan.js
src/: anki.rs  api.rs  config.rs  main.rs  media.rs  mining.rs  plex_websocket.rs  session.rs  subtitle.rs  tadoku.rs
src/media_server/: mediabrowser.rs  mod.rs  plex.rs
